added my exercise 2

--- a/course/Uitwerkingen/Uitwerking opdracht 2 Luuk.ipynb
+++ b/course/Uitwerkingen/Uitwerking opdracht 2 Luuk.ipynb
@@ -1,16 +1,60 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Uitwerking Panda Data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%matplotlib inline\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dit zijn de imports voor panda."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('../data/youtube list.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dit laad de dataset in."
+   ]
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "182a90275ea71cf27dbf5bde49345d3f48b4ede022427acd0c3d577da04120d3"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.7.13 ('ztdl')",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.7.13"
   },
   "orig_nbformat": 4
  },
