Added reflectie 4.2-raoul

--- a/course/Uitwerkingen/Uitwerking opdracht 4.2 Raoul.ipynb
+++ b/course/Uitwerkingen/Uitwerking opdracht 4.2 Raoul.ipynb
@@ -189,6 +189,15 @@
     "dfff['Id'] = df['Id']\n",
     "dfff.groupby('Age of death').count().plot()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Reflectie   \n",
+    "   \n",
+    "Deze opdracht verliep soepel. Het importeren van data is gelukt. Met wat creativiteit heb ik een paar plots kunnen maken voor de data van bekende personen."
+   ]
   }
  ],
  "metadata": {
