--- a/course/Uitwerkingen/Uitwerking opdracht 5.4.ipynb
+++ b/course/Uitwerkingen/Uitwerking opdracht 5.4.ipynb
@@ -444,6 +444,14 @@
    "source": [
     "Het Classificatie vraagstuk is het identificeren van de surfer op het aantal spelers dat op dat moment online is. Het resultaat toont aan dat de rode server zwaarder wordt belast dan de blauwe server. Dit wordt goed herkendt door shallow model. "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Reflectie\n",
+    "Het is niet heel makkelijk om een goede classificatie dataset te vinden. Ook was het lastig om de juiste instellingen te vinden voor het neural network. Maar uiteindelijk hebben we een resultaat dat een classificatie kan maken."
+   ]
   }
  ],
  "metadata": {
