--- a/course/Uitwerkingen/Uitwerking opdracht 5.1.ipynb
+++ b/course/Uitwerkingen/Uitwerking opdracht 5.1.ipynb
@@ -202,12 +202,17 @@
     "    \n",
     "plot_decision_boundary(model, X, y)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Reflectie\n",
+    "Het is nu duidelijk hoe"
+   ]
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "fee0048d56af873252b9ee55af3f35c6df3e9097c1a2c36c0f874ef4b417ee3d"
-  },
   "kernelspec": {
    "display_name": "Python 3.7.13 ('ztdl')",
    "language": "python",
@@ -224,6 +229,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "ec6a600baa5c8e0e5b20df914f33c3850488071b9fb65a7faf590f8821a64912"
+   }
   }
  },
  "nbformat": 4,
