Added generated items

--- a/course/Uitwerkingen/Uitwerking opdracht 4.2 Luuk.ipynb
+++ b/course/Uitwerkingen/Uitwerking opdracht 4.2 Luuk.ipynb
@@ -590,6 +590,14 @@
     "\n",
     "df.groupby('started ')['subscribers '].mean().plot(kind='bar', title='year-subs-corrulation')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Refectie: \n",
+    "Deze opdracht is goed verlopen en heb hierdoor goed de functies van panda geleerd voor het inladen en bewerken van de datasets. Ook heb ik geleerd hier hoe de graph functie van panda werkt om zo een goed resultaat te weergeven. Ook heb ik geleerd hoe je met datasets om moet gaan."
+   ]
   }
  ],
  "metadata": {
