--- a/course/Uitwerkingen/Uitwerking opdracht 4.3.ipynb
+++ b/course/Uitwerkingen/Uitwerking opdracht 4.3.ipynb
@@ -192,6 +192,14 @@
     "      title='Cost to age')\n",
     "plt.plot(x, y_pred, color='red')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Reflectie:\n",
+    "Deze opdracht is goed verlopen en het lukte om een lijn te maken die het gemiddelde weergeeft van de osten tot leeftijd van de ziekenhuis in de Verenigde Staten door middel van lineare regressie te gebruiken."
+   ]
   }
  ],
  "metadata": {
