--- a/course/Uitwerkingen/Uitwerking opdracht 5.1.ipynb
+++ b/course/Uitwerkingen/Uitwerking opdracht 5.1.ipynb
@@ -208,7 +208,7 @@
    "metadata": {},
    "source": [
     "### Reflectie\n",
-    "Het is nu duidelijk hoe"
+    "Het is nu duidelijk shallow model in elkaar zit. En waarom hij niet werkt in dit specefieke geval."
    ]
   }
  ],
