--- a/course/Uitwerkingen/Uitwerking opdracht 5.2.ipynb
+++ b/course/Uitwerkingen/Uitwerking opdracht 5.2.ipynb
@@ -28,6 +28,14 @@
    "source": [
     "De accuracy is best goed voor dit netwerk invergelijking tot de vorige. De accuracy is 0.9933. Er is helaas wel sprake van overfitting. Dit zie je door dat hij soms 1.0000 is maar dan weer er onder gaat. "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Reflectie\n",
+    "Het is duidelijk hoe dit deep model werkt, onderandere door het uitzoeken van de lagen in de schets hierboven als door het voorbeeld dat is gegeven in hoofdstuk 4."
+   ]
   }
  ],
  "metadata": {
