--- a/course/Uitwerkingen/Uitwerking opdracht 4.1.ipynb
+++ b/course/Uitwerkingen/Uitwerking opdracht 4.1.ipynb
@@ -388,16 +388,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Reflectie: \n",
+    "De opdracht ging goed en alle functies waren goed gedocumenteerd."
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.7.13 ('ztdl')",
    "language": "python",
    "name": "python3"
   },
@@ -412,6 +413,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "ec6a600baa5c8e0e5b20df914f33c3850488071b9fb65a7faf590f8821a64912"
+   }
   }
  },
  "nbformat": 4,
